# conan_catch2_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
gtest/: CMakeLists.txt  test.gfoo.cpp  test.gmain.cpp
test/: CMakeLists.txt  test.foo.cpp
test/catch2/: CMakeLists.txt  test.bdd.cpp  test.factorials.cpp  test.main.cpp
test/googletest/: CMakeLists.txt  test.gfoo.cpp  test.gmain.cpp
